@@ -42,3 +42,4 @@
     what is [module]
     set, if, if not, else, elseif, ifdef, ifndef, endif
     araefixhelp
+    bundleNameStyle to tparser
