@@ -78,6 +78,7 @@ typedef enum emptypktpwd {eOff, eSecure, eOn} e_emptypktpwd;
 typedef enum pktheaderdiffer {pdOff, pdOn} e_pktheaderdiffer;
 typedef enum nameCase { eLower, eUpper} e_nameCase;
 typedef enum nameCaseConvertion { cLower, cUpper, cDontTouch } e_nameCaseConvertion;
+typedef enum bundleFileNameStyle { timeStamp, addrDiff} e_bundleFileNameStyle;
 
 typedef struct link {
    s_addr hisAka, *ourAka;
@@ -405,6 +406,8 @@ typedef struct fidoconfig {
    unsigned int  ignoreSeenCount;
 
    char *tearline, *origin;
+
+   e_bundleFileNameStyle bundleNameStyle;
 
 } s_fidoconfig, *ps_fidoconfig;
 
